# Solana-Contract

./: Anchor.toml  package.json
programs/my_token/: Cargo.toml
programs/my_token/src/: lib.rs
programs/spl_token_example/: Cargo.toml
programs/spl_token_example/src/: lib.rs
scripts/: interact.mjs
tests/: solana_lst.ts
